<resources>
    <string name="app_name">EventsTrackerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_subList">Subscriptions</string>
    <string name="nav_viewUsers">View Users</string>
    <string name="nav_viewevents">View All Events</string>
    <string name="nav_createevent">Add a New Event</string>
</resources>
