<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eventstrackerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.eventstrackerapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.eventstrackerapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.eventstrackerapp.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.eventstrackerapp.ui.calendar.CalendarFragment"
        android:label="Calendar"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_carpool"
        android:name="com.example.eventstrackerapp.ui.carpool.CarpoolFragment"
        android:label="Carpool"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_subList"
        android:name="com.example.eventstrackerapp.ui.sublist.SubListFragment"
        android:label="Subscriptions"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_viewUsers"
        android:name="com.example.eventstrackerapp.ui.viewusers.ViewUsersFragment"
        android:label="All Users"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_viewevents"
        android:name="com.example.eventstrackerapp.ui.event.ViewEventsFragment"
        android:label="All Events"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_createEvent"
        android:name="com.example.eventstrackerapp.ui.event.CreateEventFragment"
        android:label="Your Clubs Event/Create an Event"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.eventstrackerapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.eventstrackerapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.eventstrackerapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>